Webpack now compiles and serves basic .jsx component

--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,19 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>React Starter</title>
+  <title>Image Viewer</title>
 </head>
 
 <body>
-  <div>halfway working</div>
-  <div id="root"></div>
-  <script src="index_bundle.js"></script>
+  <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
+  <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
+
+  <div id='root'></div>
+  <!-- <div>test div</div> -->
+  <script src="./bundle.js"></script>
+
+</script>
+
 </body>
 
 </html>
