--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
   <title>Image Viewer</title>
 </head>
 <body>
-  <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
-  <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
+  <!-- <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
+  <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script> -->
 
   <div id='root'></div>
   <!-- <div>test div</div> -->
