--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Image Viewer</title>
+  <link rel="icon" type="image/png" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSgGfLAhW1aJ-6RqtKGmaZbHgg0tACk8yFtsg&usqp=CAU"sizes="32x32"/>
 </head>
 <body>
-  <!-- <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
-  <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script> -->
 
   <div id='root'></div>
   <!-- <div>test div</div> -->
